# ChainSaw

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  cmake-multi-platform.yml
CSawStd/: CMakeLists.txt
CSawStd/include/csawstd/: CSawStd.hpp
CSawStd/src/: io.cpp  random.cpp  string.cpp
ChainSaw/: CMakeLists.txt
ChainSaw/include/codegen/: Assert.h  CodeGen.h  Context.h  Def.h  Function.h  GenExpr.h  GenOp.h  GenStmt.h  Instruction.h  Native.h  Type.h  Value.h
ChainSaw/include/csaw/: CSaw.hpp  Type.hpp
ChainSaw/include/csaw/codegen/: Block.hpp  Builder.hpp  CSawJIT.hpp  Def.hpp  Function.hpp  FunctionRef.hpp  Instruction.hpp  Value.hpp  ValueRef.hpp
ChainSaw/include/csaw/lang/: Assert.hpp  Def.hpp  Expr.hpp  Parser.hpp  Stmt.hpp
ChainSaw/include/csawstd/: CSawStd.h  IO.h  Img.h  List.h  Math.h  Random.h  Types.h
ChainSaw/include/lang/: ASTDef.h  Assert.hpp  Def.h  Def.hpp  Expr.h  Expr.hpp  Parser.h  Parser.hpp  Stmt.h  Stmt.hpp  Type.hpp
ChainSaw/include/runtime/: Compute.h  Const.h  Operators.h  Runtime.h
ChainSaw/src/: ChainSaw.cpp  Type.cpp  csaw_wip.cpp  main.cpp  type.cpp
ChainSaw/src/codegen/: Assert.cpp  Block.cpp  Branching.cpp  Builder.cpp  CodeGenExpr.cpp  CodeGenStmt.cpp  Const.cpp  Context.cpp  CreateAdd.cpp  CreateOp.cpp  CreateSub.cpp  Function.cpp  GenExpr.cpp  GenOp.cpp  GenStmt.cpp  Instruction.cpp  Print.cpp  Type.cpp  Value.cpp  builder.cpp  functionref.cpp  gen_binop.cpp  gen_expr.cpp  gen_stmt.cpp  gen_type.cpp  gen_unop.cpp  jit.cpp  valueref.cpp
ChainSaw/src/csawstd/: CSawStd.cpp  IO.cpp  Img.cpp  List.cpp  Math.cpp  Random.cpp  Types.cpp
ChainSaw/src/lang/: ASTDef.cpp  Assert.cpp  CompileDirective.cpp  Def.cpp  Expr.cpp  Graph.cpp  Next.cpp  Out.cpp  Parser.cpp  Stmt.cpp  Token.cpp  Type.cpp  compile_directive.cpp  expr.cpp  out_expr.cpp  out_stmt.cpp  parser.cpp  parser_expr.cpp  parser_next.cpp  parser_stmt.cpp  parser_type.cpp  stmt.cpp  token.cpp
ChainSaw/src/misc/: stb_image_write.cpp
ChainSaw/src/runtime/: Assign.cpp  Const.cpp  Expr.cpp  Operators.cpp  Runtime.cpp  RuntimeValue.cpp  Stmt.cpp
ChainSawCLI/: CMakeLists.txt
ChainSawCLI/src/: main.cpp
LibChainSaw/: CMakeLists.txt
LibChainSaw/config/: version.h.in
LibChainSaw/include/csaw/: Builder.hpp  CSaw.hpp  ChainSaw.hpp  Def.hpp  Error.hpp  Expect.hpp  Expr.hpp  Message.hpp  Parser.hpp  Signature.hpp  Stmt.hpp  Type.hpp  Value.hpp
LibChainSaw/include/csaw/codegen/: Builder.hpp  Def.hpp  Expect.hpp  FunctionRef.hpp  Signature.hpp  Value.hpp  ValueRef.hpp
LibChainSaw/include/csaw/lang/: Def.hpp  Expr.hpp  Parser.hpp  Stmt.hpp
LibChainSaw/src/: chainsawmessage.cpp  error.cpp  message.cpp  type.cpp  version.cpp
LibChainSaw/src/codegen/: builder.cpp  builder_functions.cpp  builder_module.cpp  cast.cpp  function.cpp  functionref.cpp  gen_binary_expr.cpp  gen_binop.cpp  gen_call_expr.cpp  gen_cast_expr.cpp  gen_char_expr.cpp  gen_dereference_expr.cpp  gen_expr.cpp  gen_float_expr.cpp  gen_function_stmt.cpp  gen_identifier_expr.cpp  gen_index_expr.cpp  gen_int_expr.cpp  gen_member_expr.cpp  gen_reference_expr.cpp  gen_select_expr.cpp  gen_sizeof_expr.cpp  gen_stmt.cpp  gen_string_expr.cpp  gen_type.cpp  gen_unary_expr.cpp  gen_unop.cpp  gen_var_stmt.cpp  lvalue.cpp  rvalue.cpp  signature.cpp  struct.cpp  superiorcast.cpp  valueref.cpp
LibChainSaw/src/lang/: compile_directive.cpp  expr.cpp  out_expr.cpp  out_stmt.cpp  parser.cpp  parser_expr.cpp  parser_next.cpp  parser_stmt.cpp  parser_type.cpp  stmt.cpp  token.cpp
PCG/: CMakeLists.txt  README.md
csaw/: csaw.xml
csaw/fib/: main.csaw
csaw/ghost/: main.csaw  random.csaw
csaw/mandel/: .gitignore  Makefile  complex.csaw  image.csaw  main.csaw  mandel.ppm
csaw/mandel/include/: complex.csh
csaw/mandel/src/: complex.csaw  image.csaw  main.csaw
csaw/pathtracer/: Makefile  aabb.csaw  bvh.csaw  camera.csaw  color.csaw  def.csaw  defines.csaw  hittable.csaw  hittable_list.csaw  interval.csaw  main.csaw  material.csaw  ray.csaw  sphere.csaw  vec3.csaw
csaw/pathtracer/include/: aabb  aabb.csh  bvh  bvh.csh  camera  camera.csh  color  color.csh  common  common.csh  hittable  hittable.csh  hittable_list  hittable_list.csh  image.csh  interval  interval.csh  material  material.csh  ray  ray.csh  sphere  sphere.csh  vec3  vec3.csh  vector.csh
csaw/pathtracer/src/: aabb.csaw  bvh.csaw  camera.csaw  color.csaw  common.csaw  hittable.csaw  hittable_list.csaw  image.csaw  interval.csaw  main.csaw  material.csaw  ray.csaw  sphere.csaw  vec3.csaw  vector.csaw
csaw/ptx/: Makefile  output.ppm
csaw/ptx/include/ptx/: camera.csh  common.csh  image.csh  render.csh
csaw/ptx/include/ptx/math/: color.csh  mat4.csh  math.csh  point3.csh  ray.csh  vec2.csh  vec3.csh  vec4.csh
csaw/ptx/include/ptx/scene/: scene.csh
csaw/ptx/src/: camera.csaw  common.csaw  image.csaw  main.csaw  render.csaw
csaw/ptx/src/math/: color.csaw  point3.csaw  ray.csaw  vec2.csaw  vec3.csaw
csaw/std/: math.csaw  stdimg.csaw  stdio.csaw  stdlib.csaw  stdvector.csaw
csaw/std/include/: stdbool  stdimage  stdlib  stdvector
csaw/std/include/gl/: gl.csh  wgl.csh
csaw/std/include/glfw/: glfw3.csh  glfw3native.csh
csaw/std/include/pcg/: pcg_basic.csh
csaw/std/include/std/: assert.csh  ctype.csh  errno.csh  fenv.csh  limits.csh  locale.csh  math.csh  pthread.csh  setjmp.csh  signal.csh  stdarg.csh  stdbool.csh  stddef.csh  stdio.csh  stdlib.csh  string.csh
csaw/std/src/: stdimage.csaw  stdvector.csaw
csaw/std/src/pcg/: pcg_basic.csaw
csaw/stdlib/: bool.csaw  img.csaw  io.csaw  math.csaw  random.csaw  types.csaw
installer/: script.iss
